- image height to 400px to prevent layout shift when images load

--- a/blocks/locations/locations.css
+++ b/blocks/locations/locations.css
@@ -43,7 +43,7 @@
 .location-images picture {
   display: block;
   width: 100%;
-  height: 100%;
+  height: 400px;
 }
 
 .location-images img {
